--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -80,9 +80,9 @@
                                                 </a>
                                             </div>
                                             <div class="col">
-                                                <button type="button" class="btn-blue" data-toggle="modal" data-target="#modalProject" 
-                                                    style="height:200px;max-width:100%;">+</button>
                                             </div>
+                                            <button type="button" class="btn-blue" data-toggle="modal" data-target="#modalProject" 
+                                              style="max-height:100%!important;max-width:200px;margin: 0px 15px 0px 0px;">+</button>
                                         </div>
                                         <!--.row-->
                                     </div>
@@ -122,9 +122,9 @@
                                                 </div>
                                               </div>
                                               <div class="col">
-                                                  <button type="button" class="btn-blue" data-toggle="modal" data-target="#modalProject" 
-                                                    style="height:100%!important;max-width:200px;">+</button>
                                               </div>
+                                              <button type="button" class="btn-blue" data-toggle="modal" data-target="#modalProject" 
+                                                style="max-height:100%!important;max-width:200px;margin: 0px 15px 0px 0px;">+</button>
                                           </div>
                                           <!--.row-->
                                       </div>
