--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -13,7 +13,7 @@
 }
 
 #profile{
-    margin-top: -140px;
+    margin-top: -160px;
 }
 
 #profile-pic {
@@ -35,6 +35,10 @@
 #name{
     color: greenyellow;
     font-weight: bold;
+    text-align: center; 
+    margin-bottom: 30px; 
+    margin-left: -300px; 
+    margin-right: -300px;
 }
 #user-info{
     margin-top: 20px;
@@ -43,8 +47,8 @@
 }
 
 #portfolio{
-    margin-top: 100px;
-    margin-left: -60px;
+    margin-top: 15px;
+    margin-left: 15px;
 }
 
 #port{
