--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="background" id="border">
     <app-profile-navbar style="background-color: transparent"></app-profile-navbar>
-    <div class="container" style="margin-top: 300px">
+    <div class="container" style="margin-top: 250px">
         <div class="row">
             <div class="col-md-4">
                 <div class="row" id="icons"style="margin-top: 80px">
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="col-md-4" id="profile">
-                <div class="" id="name" style="text-align: center;">
+                <div class="profile-name" id="name">
                     <h1>{{ aluno.nome }} {{ aluno.sobrenome }}</h1>
                 </div>
                 <div id="profile-image">
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="row" id="desafios">
-              <div id="port" class="row">
+              <div id="port" class="row" style="margin-left: 15px; margin-top:25px;">
                   <h4 style="color: #72A5FF;"><b>Desafios</b></h4>
               </div>
           </div>
